# routes/index.js
@@ -7,6 +7,7 @@ router.get("/", (req, res) => {
 
 router.use('/', require('./swagger'));
 
-router.use("/contacts", require("./contacts"));
+router.use("/movies", require("./movies"));
+router.use("/actors", require("./actors"));
 
 module.exports = router;
